[package]
name = "alogo"
version = "0.1.0"
authors = ["NaokiSatou <yomicerisier@gmail.com>"]

[[bin]]
name = "Ants"

[[bin]]
name = "recursion"

[[bin]]
name = "Partialsum"
[[bin]]
name = "Lake"
[[bin]]
name = "Maze"
[[bin]]
name = "coin"
[[bin]]
name = "abc50a"
[[bin]]
name = "abc50b"
[[bin]]
name = "abc50c"
[[bin]]
name = "abc47a"
[[bin]]
name = "abc47c"
[[bin]]
name = "abc57c"
[[bin]]
name = "abc51a"
[[bin]]
name = "abc51b"
[[bin]]
name = "abc51c"
[[bin]]
name = "abc91a"
[[bin]]
name = "abc91b"
[[bin]]
name = "abc91c"
[[bin]]
name = "abc60c"
[[bin]]
name = "abc61c"
[[bin]]
name = "abc63c"
[[bin]]
name = "abc64c"
[[bin]]
name = "abc65c"
[[bin]]
name = "abc66c"
[[bin]]
name = "abc67c"
[[bin]]
name = "abc68c"
[[bin]]
name = "abc69a"
[[bin]]
name = "abc69b"
[[bin]]
name = "abc69c"
[[bin]]
name = "abc70a"
[[bin]]
name = "abc70b"
[[bin]]
name = "abc70c"
[[bin]]
name = "abc71a"
[[bin]]
name = "abc71b"
[[bin]]
name = "abc71c"
[[bin]]
name = "abc72a"
[[bin]]
name = "abc72b"
[[bin]]
name = "abc73a"
[[bin]]
name = "abc73b"
[[bin]]
name = "abc73c"
[[bin]]
name = "abc77a"
[[bin]]
name = "abc77b"
[[bin]]
name = "abc77c"
[[bin]]
name = "test"
[[bin]]
name = "abc76a"
[[bin]]
name = "abc76b"
[[bin]]
name = "abc76c"
[[bin]]
name = "abc75a"
[[bin]]
name = "abc75b"
[[bin]]
name = "abc75c"
[[bin]]
name = "abc74a"
[[bin]]
name = "abc74b"
[[bin]]
name = "abc74c"
[[bin]]
name = "abc79a"
[[bin]]
name = "abc79b"
[[bin]]
name = "abc79c"
[[bin]]
name = "abc80a"
[[bin]]
name = "abc80b"
[[bin]]
name = "abc80c"
[[bin]]
name = "abc81a"
[[bin]]
name = "abc81b"
[[bin]]
name = "abc81c"
[[bin]]
name = "abc82a"
[[bin]]
name = "abc82b"
[[bin]]
name = "abc82c"
[[bin]]
name = "abc83a"
[[bin]]
name = "abc83b"
[[bin]]
name = "abc83c"
[[bin]]
name = "abc84a"
[[bin]]
name = "abc84b"
[[bin]]
name = "abc84c"
[[bin]]
name = "abc85a"
[[bin]]
name = "abc85b"
[[bin]]
name = "abc85c"
[[bin]]
name = "abc86a"
[[bin]]
name = "abc86b"
[[bin]]
name = "abc86c"
[[bin]]
name = "abc87a"
[[bin]]
name = "abc87b"
[[bin]]
name = "abc87c"
[[bin]]
name = "abc88a"
[[bin]]
name = "abc88b"
[[bin]]
name = "abc88c"
[[bin]]
name = "abc89a"
[[bin]]
name = "abc89b"
[[bin]]
name = "abc89c"
[[bin]]
name = "abc90a"
[[bin]]
name = "abc90b"
[[bin]]
name = "abc90c"
[[bin]]
name = "abc068a"
[[bin]]
name = "abc068b"
[[bin]]
name = "abc067a"
[[bin]]
name = "abc067b"
[[bin]]
name = "abc66a"
[[bin]]
name = "abc66b"
[[bin]]
name = "abc065a"
[[bin]]
name = "abc065b"
[[bin]]
name = "abc103a"
[[bin]]
name = "abc103b"
[[bin]]
name = "abc103c"
[dependencies]
