[package]
name = "alogo"
version = "0.1.0"
authors = ["NaokiSatou <yomicerisier@gmail.com>"]

[[bin]]
name = "Ants"

[[bin]]
name = "recursion"

[[bin]]
name = "Partialsum"
[[bin]]
name = "Lake"
[[bin]]
name = "Maze"
[[bin]]
name = "coin"
[[bin]]
name = "abc50a"
[[bin]]
name = "abc50b"
[[bin]]
name = "abc50c"
[[bin]]
name = "abc47a"
[[bin]]
name = "abc47c"
[[bin]]
name = "abc57c"
[[bin]]
name = "abc51a"
[[bin]]
name = "abc51b"
[[bin]]
name = "abc51c"
[[bin]]
name = "abc91a"
[[bin]]
name = "abc91b"
[[bin]]
name = "abc91c"
[[bin]]
name = "abc60c"
[[bin]]
name = "abc61c"
[[bin]]
name = "abc63c"
[[bin]]
name = "abc64c"
[[bin]]
name = "abc65c"
[[bin]]
name = "abc66c"
[[bin]]
name = "abc67c"
[[bin]]
name = "abc68c"
[[bin]]
name = "abc69a"
[[bin]]
name = "abc69b"
[[bin]]
name = "abc69c"
[[bin]]
name = "abc70a"
[[bin]]
name = "abc70b"
[[bin]]
name = "abc70c"
[[bin]]
name = "abc71a"
[[bin]]
name = "abc71b"
[[bin]]
name = "abc71c"
[[bin]]
name = "abc72a"
[[bin]]
name = "abc72b"
[[bin]]
name = "abc73a"
[[bin]]
name = "abc73b"
[[bin]]
name = "abc73c"
[[bin]]
name = "abc77a"
[[bin]]
name = "abc77b"
[[bin]]
name = "abc77c"
[[bin]]
name = "test"
[[bin]]
name = "abc76a"
[[bin]]
name = "abc76b"
[[bin]]
name = "abc76c"
[[bin]]
name = "abc75a"
[[bin]]
name = "abc75b"
[[bin]]
name = "abc75c"
[[bin]]
name = "abc74a"
[[bin]]
name = "abc74b"
[[bin]]
name = "abc74c"
[[bin]]
name = "abc79a"
[[bin]]
name = "abc79b"
[[bin]]
name = "abc79c"
[[bin]]
name = "abc80a"
[[bin]]
name = "abc80b"
[[bin]]
name = "abc80c"
[[bin]]
name = "abc81a"
[[bin]]
name = "abc81b"
[[bin]]
name = "abc81c"
[[bin]]
name = "abc82a"
[[bin]]
name = "abc82b"
[[bin]]
name = "abc82c"
[[bin]]
name = "abc83a"
[[bin]]
name = "abc83b"
[[bin]]
name = "abc83c"
[[bin]]
name = "abc84a"
[[bin]]
name = "abc84b"
[[bin]]
name = "abc84c"
[[bin]]
name = "abc85a"
[[bin]]
name = "abc85b"
[[bin]]
name = "abc85c"
[[bin]]
name = "abc86a"
[[bin]]
name = "abc86b"
[[bin]]
name = "abc86c"
[[bin]]
name = "abc87a"
[[bin]]
name = "abc87b"
[[bin]]
name = "abc87c"
[[bin]]
name = "abc88a"
[[bin]]
name = "abc88b"
[[bin]]
name = "abc88c"
[[bin]]
name = "abc89a"
[[bin]]
name = "abc89b"
[[bin]]
name = "abc89c"
[[bin]]
name = "abc90a"
[[bin]]
name = "abc90b"
[[bin]]
name = "abc90c"
[[bin]]
name = "abc068a"
[[bin]]
name = "abc068b"
[[bin]]
name = "abc067a"
[[bin]]
name = "abc067b"
[[bin]]
name = "abc66a"
[[bin]]
name = "abc66b"
[[bin]]
name = "abc065a"
[[bin]]
name = "abc065b"
[[bin]]
name = "abc103a"
[[bin]]
name = "abc103b"
[[bin]]
name = "abc103c"
[[bin]]
name = "abc064a"
[[bin]]
name = "abc064b"
[[bin]]
name = "abc064c"
[[bin]]
name = "abc063a"
[[bin]]
name = "abc063b"
[[bin]]
name = "abc062a"
[[bin]]
name = "abc062b"
[[bin]]
name = "abc062c"
[[bin]]
name = "abc062_sub"
[[bin]]
name = "abc061a"
[[bin]]
name = "abc061b"
[[bin]]
name = "abc060a"
[[bin]]
name = "abc060b"
[[bin]]
name = "abc059a"
[[bin]]
name = "abc059b"
[[bin]]
name = "abc059c"
[[bin]]
name = "abc058a"
[[bin]]
name = "abc058b"
[[bin]]
name = "abc057a"
[[bin]]
name = "abc057b"
[[bin]]
name = "abc056a"
[[bin]]
name = "abc056b"
[[bin]]
name = "abc054a"
[[bin]]
name = "abc054b"
[[bin]]
name = "abc053a"
[[bin]]
name = "abc053b"
[[bin]]
name = "abc053c"
[[bin]]
name = "abc104a"
[[bin]]
name = "abc104b"
[[bin]]
name = "abc104c"
[[bin]]
name = "abc049a"
[[bin]]
name = "abc049b"
[[bin]]
name = "abc049c"
[[bin]]
name = "abc048a"
[[bin]]
name = "abc048b"
[[bin]]
name = "abc048c"
[[bin]]
name = "abc105a"
[[bin]]
name = "abc105b"
[[bin]]
name = "abc105c"
[[bin]]
name = "abc046b"
[[bin]]
name = "abc046c"
[[bin]]
name = "abc106a"
[[bin]]
name = "abc106b"
[[bin]]
name = "abc106c"
[[bin]]
name = "abc106d"
[[bin]]
name = "abc045a"
[[bin]]
name = "abc045b"
[[bin]]
name = "abc044a"
[[bin]]
name = "abc044b"
[[bin]]
name = "abc043a"
[[bin]]
name = "abc043b"
[[bin]]
name = "abc043c"
[[bin]]
name = "abc042a"
[[bin]]
name = "abc042b"
[[bin]]
name = "abc042c"
[[bin]]
name = "abc041a"
[[bin]]
name = "abc041b"
[[bin]]
name = "abc041c"
[[bin]]
name = "abc107a"
[[bin]]
name = "abc107b"
[[bin]]
name = "abc107c"
[[bin]]
name = "abc040a"
[[bin]]
name = "abc040b"
[[bin]]
name = "abc040c"
[[bin]]
name = "abc039a"
[[bin]]
name = "abc039b"
[[bin]]
name = "abc039c"
[[bin]]
name = "abc037c"
[[bin]]
name = "abc037a"
[[bin]]
name = "abc037b"
[[bin]]
name = "abc036a"
[[bin]]
name = "abc036b"
[[bin]]
name = "abc108a"
[[bin]]
name = "abc108b"
[[bin]]
name = "abc035a"
[[bin]]
name = "abc036c"
[[bin]]
name = "abc034a"
[[bin]]
name = "abc034b"
[dependencies]
