[package]
name = "resolve"
version = "0.1.0"
authors = ["helloooooo <yomicerisier@gmail.com>"]

[dependencies]

[[bin]]
name = "abc088a"
[[bin]]
name = "abc088b"
[[bin]]
name = "abc088c"
[[bin]]
name = "abc089c"
[[bin]]
name = "abc090c"
[[bin]]
name = "abc092c"
[[bin]]
name = "abc093c"
[[bin]]
name = "abc094c"
[[bin]]
name = "abc095c"
[[bin]]
name = "abc096c"
[[bin]]
name = "abc097c"
[[bin]]
name = "abc098c"
[[bin]]
name = "abc100c"
[[bin]]
name = "abc101c"





