[package]
name = "resolve"
version = "0.1.0"
authors = ["helloooooo <yomicerisier@gmail.com>"]

[dependencies]

[[bin]]
name = "abc088a"
[[bin]]
name = "abc088b"
[[bin]]
name = "abc088c"
[[bin]]
name = "abc089c"
[[bin]]
name = "abc090c"
[[bin]]
name = "abc092c"
[[bin]]
name = "abc093c"
[[bin]]
name = "abc094c"
[[bin]]
name = "abc095c"
[[bin]]
name = "abc096c"
[[bin]]
name = "abc097c"
[[bin]]
name = "abc098c"
[[bin]]
name = "abc100c"
[[bin]]
name = "abc101c"

[[bin]]
name = "abc104c"
[[bin]]
name = "abc105c"
[[bin]]
name = "abc040c"
[[bin]]
name = "abc087c"
[[bin]]
name = "abc086c"
[[bin]]
name = "abc085c"
[[bin]]
name = "abc083c"
[[bin]]
name = "abc082c"
[[bin]]
name = "abc081c"
[[bin]]
name = "abc079c"
[[bin]]
name = "abc077c"
[[bin]]
name = "abc073c"









