[package]
name = "resolve"
version = "0.1.0"
authors = ["helloooooo <yomicerisier@gmail.com>"]

[[bin]]
name = "abc088a"
[[bin]]
name = "abc088b"

[[bin]]
name = "abc089c"
[[bin]]
name = "abc090c"
[[bin]]
name = "abc092c"
[[bin]]
name = "abc093c"
[[bin]]
name = "abc094c"
[[bin]]
name = "abc095c"
[[bin]]
name = "abc096c"
[[bin]]
name = "abc097c"
[[bin]]
name = "abc098c"
[[bin]]
name = "abc100c"
[[bin]]
name = "abc101c"
[[bin]]
name = "abc104c"
[[bin]]
name = "abc105c"
[[bin]]
name = "abc040c"
[[bin]]
name = "abc087c"
[[bin]]
name = "abc086c"
[[bin]]
name = "abc085c"
[[bin]]
name = "abc083c"
[[bin]]
name = "abc082c"
[[bin]]
name = "abc081c"
[[bin]]
name = "abc079c"
[[bin]]
name = "abc077c"
[[bin]]
name = "abc073c"
[[bin]]
name = "abc071c"
[[bin]]
name = "abc070c"
[[bin]]
name = "abc068c"
[[bin]]
name = "abc067c"
[[bin]]
name = "abc066c"
[[bin]]
name = "abc065c"
[[bin]]
name = "abc064c"
[[bin]]
name = "abc063c"
[[bin]]
name = "abc062c"
[[bin]]
name = "abc061c"
[[bin]]
name = "abc060c"
[[bin]]
name = "abc059c"
[[bin]]
name = "abc058c"
[[bin]]
name = "abc057c"
[[bin]]
name = "abc055c"
[[bin]]
name = "abc053c"
[[bin]]
name = "abc048c"
[[bin]]
name = "abc047c"
[[bin]]
name = "abc046c"
[[bin]]
name = "abc043c"
[[bin]]
name = "abc042c"
[[bin]]
name = "abc041c"
[[bin]]
name = "abc037c"
[[bin]]
name = "abc038b"
[[bin]]
name = "1"
[[bin]]
name = "2"
[[bin]]
name = "3"
[[bin]]
name = "4"
[[bin]]
name = "5"
[[bin]]
name = "6"
[[bin]]
name = "7"
[[bin]]
name = "8"

