[package]
name = "training_web"
version = "0.1.0"
authors = ["helloooooo <yomcerisier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "dp_1"
path = "src/dp_1.rs"
[[bin]]
name = "dp_2"
path = "src/dp_2.rs"