[package]
name = "abc136"
version = "0.1.0"
authors = ["helloooooo <yomcerisier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[[bin]]
name = "b"
path = "src/b.rs"
[[bin]]
name = "a"
path = "src/a.rs"
[[bin]]
name = "c"
path = "src/c.rs"
[[bin]]
name = "d"
path = "src/d.rs"
